--- a/layouts/partials/portfolio.html
+++ b/layouts/partials/portfolio.html
@@ -11,10 +11,12 @@
 				<div class="title text-center">
 					<h2>{{ with .title }} {{ index (split . " ") 0 }} {{ end }}<span class="color">
 							{{ with .title }} {{ index (split . " ") 1 }} {{ end }}</span></h2>
+							<p>{{ .content | markdownify }}</p>
 					<div class="border-meghna"></div>
 				</div>
 				{{"<!-- /section title -->" | safeHTML}}
 			</div>
+			
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
